[gd_scene load_steps=17 format=2]

[ext_resource path="res://Textures/mine.png" type="Texture" id=1]
[ext_resource path="res://Level.gdns" type="Script" id=2]
[ext_resource path="res://Shaders/DepthFade.shader" type="Shader" id=7]
[ext_resource path="res://Textures/sub.png" type="Texture" id=8]
[ext_resource path="res://Textures/dimmed_gradient.png" type="Texture" id=9]
[ext_resource path="res://Textures/progress_bar.png" type="Texture" id=10]
[ext_resource path="res://Textures/position_marker.png" type="Texture" id=11]
[ext_resource path="res://HUD.gd" type="Script" id=12]
[ext_resource path="res://bgrove.ttf" type="DynamicFontData" id=13]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/gradient_tex = ExtResource( 9 )

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="QuadMesh" id=3]
material = SubResource( 2 )
size = Vector2( 32, -32 )

[sub_resource type="MultiMesh" id=4]
custom_data_format = 2
mesh = SubResource( 3 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 2 )
size = Vector2( 32, -32 )

[sub_resource type="MultiMesh" id=6]
custom_data_format = 2
mesh = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 13 )

[node name="Level" type="Node2D"]
script = ExtResource( 2 )
num_subs = 10000
num_mines = 25
minefield_width = 8000
mine_texture = ExtResource( 1 )

[node name="Submarines" type="MultiMeshInstance2D" parent="."]
material = SubResource( 1 )
multimesh = SubResource( 4 )
texture = ExtResource( 8 )

[node name="Mines" type="MultiMeshInstance2D" parent="."]
material = SubResource( 1 )
multimesh = SubResource( 6 )
texture = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 12 )

[node name="ProgressBar" type="TextureRect" parent="HUD"]
margin_left = 24.0
margin_top = 24.0
margin_right = 1894.0
margin_bottom = 64.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressMarker" type="Sprite" parent="HUD"]
position = Vector2( 32, 44 )
texture = ExtResource( 11 )

[node name="EndText" type="Label" parent="HUD"]
visible = false
margin_top = 440.0
margin_right = 1928.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 7 )
text = "Mines Cleared - 100 / 100 Subs Saved
Click anywhere to restart."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
